--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
+# DEPENDENCIES
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+# PRODUCTION
 /build
 
-# misc
+# MISC
 .DS_Store
 .env.local
 .env.development.local
@@ -22,3 +17,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+
+#EDITOR CONFIG
+.vscode
+.editorconfig
