--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "svgo": "2.x.x",
+    "sweetalert2": "^11.6.16",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
